# Slicer6D

./: .gitignore  LICENSE  README  README.md  _skipped.face  _skipped.node  bunny_def.stl  deformer.py  main.py  pyproject.toml  requirements.txt  run.py
doc/src/: slicing.html
docs/: search.js  src.html
docs/src/: deformer.html  gcode_optimizer.html  main.html  slicing.html
models/: obj_1_Gear_Click_stick_v16.stl  station.STL
src/: _skipped.node  deformer.py  main.py  simple_6dof_slicer.py  slicing.py  test_test.py
src/Slicer6D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/slicing/: slicing.py
tests/: test_deformer.py  test_slicing.py
