[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Slicer6D" # Replace with your preferred project name
version = "0.1.0"
dependencies = [
    "numpy",
    "pyvista",
    "vtk",
    "pytest", # You might want to keep dev dependencies separate later
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src" # This is crucial for pytest to find your modules
