[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Slicer6D"
version = "0.0.1-beta"
dependencies = [
    "numpy",
    "pyvista",
    "vtk",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src" # This is crucial for pytest to find your modules
